# AceMyTrip

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  ssl-setup.sh
backend/: Dockerfile  README.md  main.py  pyproject.toml  seed_data.py
backend/db/: crud.py  database.py  models.py  schemas.py
frontend/: Dockerfile  package.json
frontend/pages/: index.tsx
frontend/public/: Complete project ACE.docx
nginx/conf.d/: app.conf
