[tool.poetry]
name = "acetravel-backend"
version = "0.1.0"
description = "AceMyTravel FastAPI backend"
authors = ["Generated"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
